--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,45 @@
-# This is Git's per-user configuration file.
 [user]
-# Please adapt and uncomment the following lines:
-	name = jelledetaeye
-	email = jelle@radius.com
+  email = jelle.jdc@gmail.com
+  name = Jelle Vanhorenbeke
+
+[core]
+  editor = vim
+  ignorecase = false
+  excludesfile = ~/.gitignore_global
+
+[alias]
+  g = grep --break --heading --line-number
+  s = status
+  d = diff
+
+[grep]
+  lineNumber = true
+  extendRegexp = true
+
+[color]
+  ui = true
+  interactive = auto
+  branch = auto
+  diff = auto
+  status = auto
+
+[color "branch"]
+  current = green bold
+  local = green
+  remote = red bold
+
+[color "diff"]
+  meta = yellow bold ul
+  frag = cyan bold ul
+  old = red bold
+  new = green bold
+
+[color "status"]
+  added = green bold
+  changed = yellow bold
+  untracked = red bold
+
+[filter "lfs"]
+  smudge = git-lfs smudge %f
+  required = true
+  clean = git-lfs clean %f
